--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -162,6 +162,7 @@
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ConnectionCode, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 					 Visibility="{Binding IsSSOSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 KeyDown="KeyDown"
 					 Margin="0 8" />
 			<!-- SSO Connection code -->
 
@@ -183,6 +184,7 @@
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=UserName, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 KeyDown="KeyDown"
 					 Margin="0 8" />
 			<!-- User ID -->
 
@@ -201,7 +203,8 @@
 						 PasswordChanged="UserPassword_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_Credentials_Userpw}"
-						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
+						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
+						 KeyDown="KeyDown"/>
 			<!-- Password -->
 
 			<!-- Client ID -->
@@ -222,6 +225,7 @@
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ClientId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 KeyDown="KeyDown"
 					 Margin="0 8" />
 			<!-- Client ID -->
 
@@ -240,7 +244,8 @@
 						 PasswordChanged="ClientSecret_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ClientSecret}"
-						 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
+						 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
+						 KeyDown="KeyDown"/>
 			<!-- Client Secret -->
 		</Grid>
 
