--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -79,6 +79,7 @@
 				 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Host, Type={x:Type viewModel:EdgeCredentialsViewModel}}"
 				 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 				 Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				 KeyDown="KeyDown"
 				 Margin="24 8"
 				 VerticalAlignment="Top" />
 
@@ -91,7 +92,8 @@
 				 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Username, Type={x:Type viewModel:EdgeCredentialsViewModel}}"
 				 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 				 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				 Margin="24 8" 
+				 KeyDown="KeyDown"
+				 Margin="24 8"
 				 VerticalAlignment="Top"/>
 
 		<PasswordBox Grid.Row="5"
@@ -100,8 +102,9 @@
 					 PasswordChanged="UserPassword_Changed"
 					 Style="{StaticResource WatermarkPasswordBox}"
 					 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
-					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
-					 Margin="24 0 24 16"/>
+					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 KeyDown="KeyDown"
+					 Margin="24 0 24 16" />
 
 		<PasswordBox Grid.Row="6"
 					 Grid.ColumnSpan="2"
@@ -110,6 +113,7 @@
 					 Style="{StaticResource WatermarkPasswordBox}"
 					 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_APIKey}"
 					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 KeyDown="KeyDown"
 					 Margin="24 0 24 16" />
 
 		<Button Grid.Row="7"
