--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -251,6 +251,30 @@
 
 		<Button Grid.Row="3"
 				Grid.ColumnSpan="2"
+				Style="{StaticResource Sdl.Button.HyperLinkStyle}"
+				Command="{Binding OpenExternalUrlCommand}"
+				Visibility="{Binding ShowVerifyCredentialsWarning, Converter={StaticResource BooleanToVisibilityConverter}}"
+				HorizontalAlignment="Center"
+				HorizontalContentAlignment="Center">
+			<Button.Content>
+				<StackPanel Orientation="Horizontal"
+							HorizontalAlignment="Center">
+					<TextBlock Text="Unable to connect?"
+							   Foreground="Red"
+							   VerticalAlignment="Top"
+							   HorizontalAlignment="Center"
+							   Margin="0 6 0 0" />
+					<TextBlock Text="Click here to verify your credentials"
+							   VerticalAlignment="Top"
+							   HorizontalAlignment="Center"
+							   Margin="2 6 0 0" />
+				</StackPanel>
+			</Button.Content>
+		</Button>
+
+
+		<Button Grid.Row="3"
+				Grid.ColumnSpan="2"
 				Content="{x:Static root:PluginResources.Auth_SignIn}"
 				Command="{Binding SignInCommand}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
