--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -191,6 +191,17 @@
 								   FontSize="12"
 								   Margin="0 4" />
 
+						<TextBlock Grid.Row="1"
+								   Text="{x:Static root:PluginResources.Auth_Cloud_FSSO_ToolTip}"
+								   Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudSSO}}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
+
 						<!-- Content and Back Button -->
 						<StackPanel Grid.Row="3">
 							<ContentControl Content="{Binding ProviderView}"
