--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -70,6 +70,15 @@
 				Height="32"
 				Margin="0 4" />
 
+		<!-- Host + port -->
+		<TextBlock Grid.Row="3"
+				   Text="Host"
+				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+				   Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				   VerticalAlignment="Center"
+				   Margin="32 8"
+				   Focusable="True" />
+		
 		<TextBox Grid.Row="3"
 				 Grid.Column="1"
 				 Text="{Binding Host, UpdateSourceTrigger=PropertyChanged}"
@@ -82,7 +91,17 @@
 				 KeyDown="KeyDown"
 				 Margin="24 8"
 				 VerticalAlignment="Top" />
-
+		<!-- Host + port -->
+		
+		<!-- Username -->
+		<TextBlock Grid.Row="4"
+				   Text="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Username}"
+				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+				   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				   VerticalAlignment="Center"
+				   Margin="32 8"
+				   Focusable="True" />
+		
 		<TextBox Grid.Row="4"
 				 Grid.Column="1"
 				 Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
@@ -95,7 +114,17 @@
 				 KeyDown="KeyDown"
 				 Margin="24 8"
 				 VerticalAlignment="Top"/>
+		<!-- Username -->
 
+		<!-- Password -->
+		<TextBlock Grid.Row="5"
+				   Text="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
+				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+				   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				   VerticalAlignment="Center"
+				   Margin="32 0 32 16"
+				   Focusable="True" />
+		
 		<PasswordBox Grid.Row="5"
 					 Grid.ColumnSpan="2"
 					 x:Name="userPwBox"
@@ -105,7 +134,17 @@
 					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					 KeyDown="KeyDown"
 					 Margin="24 0 24 16" />
+		<!-- Password -->
 
+		<!-- API Key -->
+		<TextBlock Grid.Row="6"
+				   Text="{x:Static root:PluginResources.Auth_Edge_APIKey}"
+				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+				   Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+				   VerticalAlignment="Center"
+				   Margin="32 0 32 16"
+				   Focusable="True" />
+		
 		<PasswordBox Grid.Row="6"
 					 Grid.ColumnSpan="2"
 					 x:Name="apiKeyBox"
@@ -115,6 +154,7 @@
 					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					 KeyDown="KeyDown"
 					 Margin="24 0 24 16" />
+		<!-- API Key -->
 
 		<Button Grid.Row="7"
 				Content="{x:Static root:PluginResources.Auth_SignIn}"
