--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/FileType/Views/LanguageMappingView.xaml
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/FileType/Views/LanguageMappingView.xaml
@@ -56,6 +56,7 @@
 							<RowDefinition Height="Auto"/>
 							<RowDefinition Height="Auto"/>
 							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
 						</Grid.RowDefinitions>
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto"/>
@@ -84,8 +85,10 @@
 								</StackPanel>
 							</Image.ToolTip>
 						</Image>
-						      
-						
+
+						<CheckBox Grid.Row="3" Grid.Column="0" Margin="0,5,0,5" Grid.ColumnSpan="3" VerticalAlignment="Center" 
+						          Content="Read hyperlinks"
+						          IsChecked="{Binding ReadHyperlinks}"/>
 					</Grid>
 				</GroupBox>
 
